tests/paczka1/small_fuzzy/28033558.err
Error in line 2: VvC2bzCHlt S96 70,9
Error in line 10: LWHlzbhLl S619 59,1
